trying to get image to work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="cutout"> 
-        <img src="C:\Users\a-c\OneDrive\Documents\GitHub\necropaulis.github.io\avatar-jessica.jpeg" alt="it works or it dont">
+        <img src="\necropaulis.github.io\avatar-jessica.jpeg" alt="it works or it dont">
         <div class="info">
           <h1 id="name">Jessica Randall</h1>
           <h3 id="location">London, United Kingdom</h3>
