trying through github link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="cutout"> 
-        <img src="https://1drv.ms/i/s!AolEz7IgYhwXgZh0Y5Mah54_i5MAXw?e=YCOHDJ" alt="it works or it dont">
+        <img src="necropaulis.github.io/avatar-jessica.jpeg" alt="it works or it dont">
         <div class="info">
           <h1 id="name">Jessica Randall</h1>
           <h3 id="location">London, United Kingdom</h3>
